...
        android:layout_height="50dp"
        android:background="@drawable/white_grey_border_bottom">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportMissingPetToolBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/backArrow_reportMissingPet"
                    android:src="@drawable/ic_backarrow"/>

                <TextView
                    android:layout_toRightOf="@+id/backArrow_reportMissingPet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
