...
            android:layout_height="wrap_content"
            android:text="My Lost Pets" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reportPetFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lightgrey"
        android:backgroundTintMode="src_in"
...
        app:backgroundTint="#CACACA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tablayout"
        tools:layout_editor_absoluteX="-2dp">

...
